# wordflow

./: AGENTS.md  README.md  pyproject.toml  run-dev.sh  setup.py
scripts/: build-linux.sh  build-windows.cmd  build-windows.ps1
src/wordflow/: __init__.py  __main__.py  app.py  parsing.py  storage.py
tests/: test_parsing.py  test_storage.py
tools/: wordflow_launcher.py
