[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordflow"
version = "0.1.0"
description = "A terminal spelling trainer for English articles."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "textual>=0.58.0,<1.0.0",
]

[project.scripts]
wordflow = "wordflow.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
